# u.leti.9892.3sem-2020.programming.1lab

./: .gitignore  CMakeLists.txt  README.md  delete_words_with_char.cpp  delete_words_with_char.h  files_lib.cpp  files_lib.h  if_string_contains_char.cpp  if_string_contains_char.h  input.txt  main.cpp  output.txt  print_array_of_strings.cpp  print_array_of_strings.h  strcat_impl.cpp  strcat_impl.h
report/: 1  report.tex  report_lr1.tex
report/modules/: inputs.tex  title_page.tex
report/modules/chapters/: conclusion.tex  data_structures_description.tex  files_formats.tex  functions_description.tex  goal.tex  listing.tex  programm_algorithm.tex  task_defenition.tex  tests.tex
report/modules/inputs/: cppcode.tex  general.tex  pictures.tex
report/resources/: data_schema.drawio  truck_brand.drawio
